fix: add missing padding in edit mode

--- a/src/pages/edit/styles/TitleBar.module.css
+++ b/src/pages/edit/styles/TitleBar.module.css
@@ -1,5 +1,6 @@
 .container {
     background: var(--colors-grey100);
+    padding-inline: var(--spacers-dp16);
 }
 
 .inputWrapper {
